tests/modules/fail/0003-module-missing-var-xsig.ec
type t.

module type I = {
  var x : t
}.

module type J = {
  var y : t
}.

module M : I, J = {
  var x : t
}.
